--- a/Pokemon_Battle/admin/Originality.yml
+++ b/Pokemon_Battle/admin/Originality.yml
@@ -1,5 +1,5 @@
 declaration: >-
-  Stage G represents the culmunation of the entire assignment.  We declare that
+  We declare that
   everything we have submitted for for all stages of this assignment was
   entirely our own work, with the following exceptions:
 
