--- a/Pokemon_Battle/admin/Members.yml
+++ b/Pokemon_Battle/admin/Members.yml
@@ -1,13 +1,13 @@
 members:
   - name: Yuexin Chen
-    uid:
-    contact:
+    uid: u7194943
+    contact: kevin1996chen@gmail.com,
   - name: Xi Chen
-    uid:
-    contact:
+    uid: u7172190
+    contact: chloechen4869@gmail.com
   - name: Qixuan Ren
     uid: u7173507
     contact: natalierqx@gmail.com
   - name: Yifei Tao
-    uid:
-    contact:
+    uid: u7078518
+    contact: zjlhtyf@gmail.com
